<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_explore_new"
        android:orderInCategory="1"
        android:title="@string/explore_new_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_explore_favorites"
        android:orderInCategory="2"
        android:title="@string/explore_favorite_books"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="3"
        android:title="@string/logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_for_books"
        android:contentDescription="@string/search_for_books"/>
</menu>