<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailsActivity">

    <LinearLayout
        android:id="@+id/book_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/book_detail_cover"
                android:layout_width="203dp"
                android:layout_height="303dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/book_cover_description"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="60dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_book_authors_label"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:id="@+id/detail_book_authors_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="me and you"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_book_price_label"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:id="@+id/detail_book_price_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="me and you"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_book_language_label"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:id="@+id/detail_book_language_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="me and you"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_book_pages_label"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:id="@+id/detail_book_pages_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="me and you"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_book_published_year_label"
                        android:textStyle="bold"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"/>
                    <TextView
                        android:id="@+id/detail_book_published_year_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="me and you"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <ImageButton android:id="@+id/book_favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favourite_empty"
            android:layout_gravity="end"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:background="#00ffffff" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:text="@string/detail_book_description_label"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/detail_book_description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />
        </ScrollView>

        <Button
            android:id="@+id/detail_book_open_in_website_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/detail_book_open_in_website_button_label"/>
    </LinearLayout>

    <TextView
        android:id="@+id/book_details_loading_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/error_message"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:textColor="#ff0000"/>

    <ProgressBar
        android:id="@+id/book_details_loading_progress_bar"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

</FrameLayout>